--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -987,6 +987,73 @@
     {
       "cell_type": "code",
       "source": [
+        "import torch\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.manifold import TSNE\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "TEST_FILE = f\"{output_dir}/holdout_test_300.csv\"\n",
+        "FOLD_TO_TEST = 1\n",
+        "MODEL_PATH = f\"{output_dir}/fold_{FOLD_TO_TEST}\"\n",
+        "\n",
+        "print(f\"Loading Holdout Test Data from: {TEST_FILE}\")\n",
+        "df_test = pd.read_csv(TEST_FILE)\n",
+        "sample_size = 300\n",
+        "df_viz = df_test.sample(sample_size, random_state=42).copy()\n",
+        "texts = df_viz['Combined'].tolist()\n",
+        "labels = df_viz['label'].tolist()\n",
+        "\n",
+        "labels_names = [id2label[l] for l in labels]\n",
+        "\n",
+        "embeddings = []\n",
+        "\n",
+        "model.eval()\n",
+        "print(\"Extracting embeddings from RoBERTa...\")\n",
+        "with torch.no_grad():\n",
+        "    for text in tqdm(texts):\n",
+        "        inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, max_length=256).to(device)\n",
+        "        outputs = model.base_model(**inputs, output_hidden_states=True)\n",
+        "\n",
+        "        cls_embedding = outputs.hidden_states[-1][0, 0, :].cpu().numpy()\n",
+        "        embeddings.append(cls_embedding)\n",
+        "\n",
+        "embeddings = np.array(embeddings)\n",
+        "\n",
+        "print(\"Running t-SNE...\")\n",
+        "tsne = TSNE(n_components=2, random_state=42, perplexity=30, n_iter=1000)\n",
+        "tsne_results = tsne.fit_transform(embeddings)\n",
+        "\n",
+        "df_viz['x'] = tsne_results[:, 0]\n",
+        "df_viz['y'] = tsne_results[:, 1]\n",
+        "df_viz['Misconception'] = labels_names\n",
+        "\n",
+        "plt.figure(figsize=(16, 10))\n",
+        "sns.scatterplot(\n",
+        "    data=df_viz,\n",
+        "    x='x', y='y',\n",
+        "    hue='Misconception',\n",
+        "    palette='tab20',\n",
+        "    s=70, alpha=0.8,\n",
+        "    legend='full'\n",
+        ")\n",
+        "\n",
+        "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+        "plt.title('Semantic Landscape of Misconceptions (RoBERTa Embeddings)', fontsize=20)\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "pB03iCjWH4DV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "unique_misconceptions = df['Misconception'].dropna().unique()\n",
         "\n",
         "sorted_misconceptions = sorted(unique_misconceptions)\n",
